ocaml/testsuite/tests/jane-modular-syntax/user_error1.compilers.reference
File "user_error1.ml", line 21, characters 39-41:
21 | let _malformed_extension_has_payload = () [@jane.erasable.something "no payloads"];;
                                            ^^
Error: Unknown extension "something" referenced via
       a [@jane.erasable.something] attribute
